<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".NewPlayerFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_player"
            android:layout_marginBottom="20dp"
            android:textAlignment="textStart"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/etNewplayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/playername"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnAddnewplayer"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:stateListAnimator="@null"
            android:text="@string/add_new_player"
            android:textAllCaps="false"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>